# loglady

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/loglady/: __about__.py  __init__.py  __main__.py  _config_stack.py  _environ.py  _excepthook.py  _fallback.py  _thread_emoji.py  _tracebackhide.py  config.py  destination.py  errors.py  logger.py  magics.py  manager.py  manager_stack.py  middleware.py  middlewares.py  processors.py  pytest.py  testing.py  threading.py  transport.py  types.py  warnings.py
src/loglady/_rich/: __init__.py  formatters.py  renderer.py  stacktrace.py
src/loglady/rich/: __init__.py  _stacktrace.py  destination.py  formatters.py
tests/: __init__.py  conftest.py  test_fallback_modes.py  test_high_level.py  test_logger.py  test_middleware.py  test_plugin.py  test_processors.py  test_testing.py  test_thread_emoji.py  test_transport.py  utils.py
tests/scripts/: deferred_capture.py  log_before_configure.py  log_without_configure.py
